--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -11,8 +11,8 @@
   position: absolute;
   top: 0;
   left: 0px;
-  width: 440px;
-  height: 586px;
+  width: 473px;
+  height: 609px;
   object-fit: cover;
 }
 .login1,
@@ -22,7 +22,7 @@
 }
 .login1 {
   top: 37px;
-  left: 488px;
+  left: 514px;
   font-size: 45px;
   color: #3d5054;
   width: 165px;
@@ -30,7 +30,7 @@
 }
 .please-enter-your {
   top: 90px;
-  left: 490px;
+  left: 514px;
   width: 382px;
   height: 24px;
   color:#3d5054;
@@ -44,12 +44,24 @@
   border: 1px solid black;
   position: absolute;
   top: 145px;
-  left: 490px;
+  left: 514px;
   width: 349.2px;
   height: 49.21px;
 }
+.form-error2 {
+  color: red;
+  font-size: 12px;
+  position: absolute;
+  top: 181px;
+  left: 530px;
+  display: flex;
+  flex-direction: row;
+  padding: 16px 11px;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
 .password-input {
-  top: 209.39px;
+  top: 216px;
   padding: 16px 11px;
   font-family: "Inter";
   font-size: 16px;
@@ -57,9 +69,21 @@
   border-radius: 10px;
   border: 1px solid black;
   position: absolute;
-  left: 490px;
+  left: 514px;
   width: 349.2px;
   height: 49.21px;
+}
+.form-error3 {
+  color: red;
+  font-size: 12px;
+  position: absolute;
+  top: 253px;
+  left: 530px;
+  display: flex;
+  flex-direction: row;
+  padding: 16px 11px;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 .login-button-child {
   position: absolute;
@@ -91,8 +115,8 @@
   padding: 0;
   background-color: transparent;
   position: absolute;
-  top: 353.75px;
-  left: 490px;
+  top: 367px;
+  left: 514px;
   width: 349.2px;
   height: 49.21px;
 }
@@ -100,8 +124,8 @@
 .forget-password,
 .keep-me-logged {
   position: absolute;
-  top: 414px;
-  left: 495px;
+  top: 425px;
+  left: 514px;
   display: inline-block;
   color: #3d5054;
   width: 185px;
@@ -136,8 +160,8 @@
   width: 22.19px;
 }
 .dont-foget {
-  top: 274px;
-  left: 515px;
+  top: 283px;
+  left: 537px;
   width: 347.63px;
 }
 .or-continue-with {
@@ -168,7 +192,7 @@
   position: absolute;
   color: black;
   top: 480px;
-  left: 495px;
+  left: 520px;
   width: 342.09px;
   height: 16px;
 }
@@ -280,14 +304,14 @@
 }
 .icons {
   top: 512px;
-  left: 513px;
+  left: 537px;
   width: 280px;
   height: 40px;
 }
 .sign-up {
   text-decoration: none;
-  top: 414px;
-  left: 650px;
+  top: 425px;
+  left: 670px;
   font-weight: 700;
   color: #242c2e;
 }
@@ -298,16 +322,20 @@
 }
 .login {
   position: absolute;
-  top: 14px;
-  left: 240px;
+  top: 19px;
+  left: 222px;
   border: 1px solid black;
   border-radius: 10px;
   box-sizing: border-box;
-  width: 890px;
-  height: 585px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  width: 917px;
+  height: 586px;
 }
 .desktop-1 {
   position: relative;
+  top: 74px;
   width: 100%;
   height: 629px;
   text-align: left;
