--- a/src/components/Login/pass.css
+++ b/src/components/Login/pass.css
@@ -46,7 +46,7 @@
   border: 1px solid black;
   background-color: var(--color-white);
   position: absolute;
-  top: 275px;
+  top: 285px;
   left: 535px;
   border-radius: 10px;
   box-sizing: border-box;
@@ -68,7 +68,7 @@
   cursor: pointer;
   background-color:#3d5054;
   position: absolute;
-  top: 380px;
+  top: 385px;
   left: 583px;
   border-radius: 10px;
   box-sizing: border-box;
@@ -86,6 +86,8 @@
 .desktop-3 {
   position: relative;
   background-color: var(--color-white);
+  top: 110px;
+  left: 10px;
   width: 100%;
   height: 629px;
   overflow: hidden;
@@ -93,4 +95,34 @@
   font-size: var(--font-size-11xl);
   color: var(--grey);
   font-family: var(--font-inter);
+}
+.form-error {
+  font-size: 0.9rem;
+  color: red;
+  position: absolute;
+  top: 245px;
+  left: 528px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  padding: 11px 11px;
+}
+.form-error1 {
+  font-size: 0.9rem;
+  color: red;
+  position: absolute;
+  top: 330px;
+  left: 528px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  padding: 11px 11px;
+}
+.input-label {
+  font-size: 11px;
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 0.7px;
+  color: #8c7569;
+  transition: 0.3s;
 }
